--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "sweetalert2": "^11.11.0"
