--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "circular-json": "^0.5.9",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
