--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,20 +1,25 @@
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "./index.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
           "node_modules/bcrypt/lib/binding/**"
-        ]
-      }
+         ]
+       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "./index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
