--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "version": 2,
   "builds": [
@@ -8,8 +7,8 @@
       "config": {
         "includeFiles": [
           "node_modules/bcrypt/lib/binding/**"
-         ]
-       }
+        ]
+      }
     }
   ],
   "routes": [
@@ -18,7 +17,10 @@
       "dest": "./index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "https://virtual-hospital-frontend.vercel.app",
+        "Access-Control-Allow-Methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
       }
     }
   ]
