--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,26 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "node_modules/bcrypt/lib/binding/**"
-        ]
-      }
+      "src": "index.js",
+      "use": "@vercel/node"
+      
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://virtual-hospital-frontend.vercel.app",
-        "Access-Control-Allow-Methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "dest": "/"
     }
   ]
 }
