everything shifted to localhost

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -17,7 +17,7 @@
       "dest": "/",
       "methods": ["GET", "POST", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://virtual-hospital.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type"
       }
