--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.11.0",
+    "universal-cookie": "^7.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
