add build command

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build",
     "dev": "nodemon index.js"
   },
   "keywords": [
