--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-
+PORT= 8000
 MONGODB_URI= mongodb+srv://sushilssharma064:sushilssharma064@cluster0.y3mxeba.mongodb.net/
 CORS_ORIGIN=*
 ACCESS_TOKEN_SECRET= sushilCode
